# advent_of_code

./: .gitignore  CHANGELOG.md  advent-of-code.cabal
2017/: 1.hs  18.hs  2.hs  3.hs
2018/: 01.hs  02.hs  03.hs  04.hs  06.hs  07.hs  09.hs  10.hs  20.hs  5.hs  8.hs
2019/: Main.hs  P01.hs  P02.hs  P03.hs  P04.hs  P05.hs  P06.hs  P07.hs  P08.hs  P09.hs  P10.hs  P11.hs  Utils.hs  VM.hs
2019/inputs/: 01.txt  04.txt
2020/: Main.hs  P01.hs  P02.hs  P03.hs  P04.hs  P05.hs  P06.hs
2022/: Day01.hs  Day02.hs
