-- This is only so we keep track of the library we depend on.

name:                advent-of-code
version:             0.1.0.0
-- synopsis:
-- description:
license:             ISC
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10


executable a19
  build-depends:       base >=4.12 && <4.15, containers, pretty-show, vector,
                       filepath
  hs-source-dirs:      2019
  main-is:             Main.hs
  other-modules:       Utils,
                       VM,
                       P01,
                       P02,
                       P03,
                       P04
                       P05,
                       P06,
                       P07,
                       P08,
                       P09
  ghc-options: -Wall
  default-language:    Haskell2010

